FIX(home-page): remove hover effects on mobile for ProductCard
Jira: [[FE] Fix hover effects on mobile](https://cozyhometeam.atlassian.net/browse/CH-87)

--- a/src/components/NewItems/NewItems.scss
+++ b/src/components/NewItems/NewItems.scss
@@ -50,6 +50,9 @@
         .container_pd-right-off {
             padding-right: 0;
         }
+        &__cards {
+            margin-top: 24px;
+        }
         &__title {
             font-size: 20px;
         }
